finish lab1 report,modify generate_op.py and lab2/main.c

--- a/report/进程管理实验.md
+++ b/report/进程管理实验.md
@@ -1,6 +1,6 @@
 # 进程管理实验
 
-## 实验内容
+## 实验引入
 
 ### 背景
 
@@ -34,7 +34,7 @@ mov ax (count地址)  # 放回count
 
 ---
 
-### 引入
+### 读者写者问题
 
 如前面所说，当多个进程同时需要使用一个资源时，对资源的并发操作可能会产生不是预想的结果。各个进程对资源的操作被称为临界区，一种解决同时操作资源产生错误的方法为使用互斥锁，如下
 
@@ -51,3 +51,930 @@ mtx.unlock();
 在上面的场景下，用互斥锁的方法可以解决正确性的问题，只要将对红黑树的读写操作均放入临界区即可。但容易发现，对红黑树的读操作不会改变红黑树的状态，即多个读者同时操作红黑树是可以的。需要避免的是写者和写者同时操作、写者和读者同时操作。而直接简单粗暴的使用互斥锁将读写操作都放在临界区使得读者和读者之间的读操作也变成互斥得了，本来可以并行进行的操作变成了串行的，这将会导致效率降低，尤其是当读操作占比例非常大的时候，并发的读者在读时不得不排队等待资源，这将使效率降低很多。
 
 在接下来的实验中，将使用信号量这一同步工具来解决读者写者问题，使得读者-写者、写者-写者间互斥，但允许读者-读者间的并发操作。
+
+---
+
+### 实验内容
+
+在本实验中，将使用操作系统提供的信号量机制，模拟多进程下的读者优先和写者优先，保证程序能稳定运行20分钟。由于多进程下共享资源较为麻烦，在实验中使用多线程来进行模拟。
+
+---
+
+## 实验过程
+
+### 信号量
+
+#### 介绍
+
+信号量是一个标识资源多少的量，初始化时可以设置资源数量的初始值。信号量支持`wait()`和`signal()`这两种操作，其中`wait`用于申请使用一个资源，`signal`用于释放一个资源。用伪代码标识信号量的操作如下
+
+```c
+semaphore S = 3 ;  // 初始化操作 初始化资源数量为3
+
+S.wait();          // 申请使用资源，若资源数量大于0则可以申请，并将资源数量减一，否则阻塞直到有资源
+S.signal();        // 释放资源，将可用资源数量+1
+
+// 上述的两个操作可以看成原子的
+```
+
+信号量是进程同步的一个很通用的工具，使用信号量可以解决很多问题，如前文的临界区互斥，就可以用信号量来实现如下
+
+```c
+semaphore mutex = 1;  
+
+void writer(){
+  mutex.wait();
+  // critical section 
+  mutex.signal();
+}
+```
+
+可以看到信号量实现了互斥锁的功能。
+
+---
+
+#### 实现
+
+每个信号量内部维护了一个代表资源数量的整数`resource_num`，信号量的实现可以大致描述如下
+
+1. 信号量的初始化操作:即给`resource_num`赋初值。
+2. `wait`操作:将`resource_num`值减一，若该值降到0以下，将该进程挂起，放入该信号量对应的等待队列内，等待调度。
+3. `signal`操作:将`resource_num`值加一，若该值仍小于等于0，说明有进程在等待资源，使用一定的调度算法从该信号量对应的等待队列中挑出一个进程唤醒。
+
+注意上述描述中中的操作在实现时要保证原子性(否则resource_num和队列均可能出错)。
+
+---
+
+### 实验
+
+#### 读者优先
+
+首先要保证写者-写者、写者-读者互斥，使用一个信号量来保证对资源操作的互斥，读者写者逻辑如下
+
+```c
+semaphore resource = 1;  // 用于资源互斥 
+
+void writer(){
+  resource.wait();  // 尝试占用资源
+  ... ;             // 拿到资源进行写操作
+  resource.signal();  // 释放资源
+}
+
+void reader(){
+  resource.wait();  // 尝试占用资源
+  ... ;             // 拿到资源进行读操作
+  resource.signal();  // 释放资源
+}
+```
+
+上述代码使用`resource`保证对资源操作的互斥，但由于每一个读者都通过`wait`来尝试获取资源，这就导致读者之间也互斥了。为了解决这个问题，一种方法是:在读者到来时，若发现自己是第一个读者，就尝试占用资源，若自己不是第一个读者，说明已经有读者占用了资源进行读了，就不需要`wait`，可以直接进行读操作。该办法实现如下
+
+```c
+semaphore resource = 1;  // 用于资源互斥 
+int reader_cnt = 0;
+
+void writer(){
+  resource.wait();  // 尝试占用资源
+  ... ;             // 拿到资源进行写操作
+  resource.signal();  // 释放资源
+}
+
+void reader(){
+  /*------进入区----------*/
+  reader_cnt ++;       // 读者计数
+  if(reader_cnt == 1)  // 我是第一个读者，尝试获取资源
+    resource.wait();
+  /*------进入区----------*/
+  
+  ... ;  // 读操作
+  
+  /*------退出区----------*/
+  reader_cnt --;       // 读完了 将计数减一
+  if(reader_cnt == 0)  // 我是最后一个，已经没有读者了，应当释放资源
+  	resource.signal();
+  /*------退出区----------*/
+}
+```
+
+容易发现，上述代码引入了新的问题，即多个读者可能同时写`reader_cnt`变量，这导致该变量的值可能并不是预期的值。为了解决该问题，引入一个新的信号量作为互斥锁来保证`reader_cnt`的安全，修改代码如下
+
+```c
+semaphore resource = 1;  // 用于资源互斥 
+int reader_cnt = 0;
+semaphore cnt_lock = 1;
+
+void writer(){
+  resource.wait();  // 尝试占用资源
+  ... ;             // 拿到资源进行写操作
+  resource.signal();  // 释放资源
+}
+
+void reader(){
+  /*------进入区----------*/
+  cnt_lock.wait();
+  reader_cnt ++;       // 读者计数
+  if(reader_cnt == 1)  // 我是第一个读者，尝试获取资源
+    resource.wait();
+  cnt_lock.signal();
+  /*------进入区----------*/
+  
+  ... ;  // 读操作
+  
+  /*------退出区----------*/
+  cnt_lock.wait();
+  reader_cnt --;       // 读完了 将计数减一
+  if(reader_cnt == 0)  // 我是最后一个，已经没有读者了，应当释放资源
+  	resource.signal();
+  cnt_lock.signal();
+  /*------退出区----------*/
+}
+```
+
+修改后的代码就保证了`reader_cnt`的安全，上面的代码可以保证读者-写者、写者-写者不同时进入临界区，同时可以发现多个读者是可以同时进入临界区的，因为只有第一个读者需要进行`resourse.wait()`，后面的读者可以直接进入。在该实现中，只要还有读者存在，读者就不会执行`resource.signal()`释放资源，写者就没机会使用资源，即写者必须等到没有读者时才能写，因此该实现是读者优先的。
+
+可以发现上述代码中，虽然实现了多个读者同时对资源进行读操作，但读者的进入区和退出区之间又变成互斥的了，进入和退出变成串行的了，这是否反而会使效率变的更低？事实上，在进入区和退出区的操作非常简单短小，在实际解决读者-写者问题时，读者的读操作会比该实现的进入区和退出区复杂的多，因此使用该代码虽然会有两个互斥的代码片段，但互斥的代码长度、复杂度比读者读操作更短、更小，总体来说还是会使得性能提高(相比直接将读操作变为互斥)。
+
+---
+
+#### 读者优先实现
+
+本实验中使用c语言来实现，读者优先代码见`lab1/reader_first.c  lab1/reader_first.h`。上述读者优先需要`resource  cnt_lock`两个信号量和一个计数器`reader_cnt`，故定义如下结构
+
+```c
+// reader_first.c
+typedef struct reader_first_rw_lock{
+    int reader_cnt;    // number of reader
+    sem_t cnt_lock;    // lock reader_cnt
+    sem_t resource;    // lock resource
+}reader_first_rw_lock;
+```
+
+在头文件中暴露该类型如下
+
+```c
+// reader_first.h
+typedef struct reader_first_rw_lock *rf_rw_lock;
+```
+
+初始化以及销毁的代码如下
+
+```c
+// reader_first.h
+rf_rw_lock new_rf_rw_lock(){
+    rf_rw_lock t = malloc(sizeof(reader_first_rw_lock));
+
+    if(t == NULL)
+        return NULL; // fail to allocate memory
+
+    t->reader_cnt = 0;
+    sem_init(&t->cnt_lock,0,1);
+    sem_init(&t->resource, 0, 1);
+
+    return t;
+}
+
+void destroy_rf_rw_lock(rf_rw_lock t) {
+    sem_destroy(&t->cnt_lock);
+    sem_destroy(&t->resource);
+    free(t);
+}
+```
+
+依据前文的实现封装读者的进入区代码如下
+
+```c
+void rf_r_lock(rf_rw_lock lock){
+    sem_wait(&lock->cnt_lock); // lock reader_cnt
+    lock->reader_cnt ++;           // reader + 1
+    if(lock->reader_cnt == 1)      // this is the first reader
+        sem_wait(&lock->resource);  // reader tries to occupy the resource
+    sem_post(&lock->cnt_lock); // release reader_cnt
+}
+```
+
+读者退出区代码如下
+
+```c
+void rf_r_unlock(rf_rw_lock lock) {
+    sem_wait(&lock->cnt_lock); // lock reader_cnt
+    lock->reader_cnt --;
+    if(lock->reader_cnt == 0)      // last reader
+        sem_post(&lock->resource);  // release the resource so that writer can occupy
+    sem_post(&lock->cnt_lock); // release reader_cnt
+}
+```
+
+同理写者的进入区和退出区代码如下
+
+```c
+void rf_w_lock(rf_rw_lock lock) {
+    sem_wait(&lock->resource);    // try to occupy the resource
+}
+
+void rf_w_unlock(rf_rw_lock lock) {
+    sem_post(&lock->resource);
+}
+```
+
+封装完成后，读者写者的逻辑可以简化为
+
+```c
+rf_rw_lock lock;
+
+void init(){
+  lock = new_rf_rw_lock();
+}
+
+void reader(){
+  rf_r_lock(lock);
+  
+  ... ;// 读操作
+  
+  rf_r_unlock(lock);
+}
+
+void writer(){
+  rf_w_lock(lock);
+  
+  ... ;// 写操作
+  
+  rf_w_unlock(lock);
+}
+```
+
+---
+
+#### 写者优先
+
+在很多应用中，一般读操作会比写操作频率多很多，若采用上面实现的读者优先方式，会导致写者长时间等待没有机会写，故在本实验中同时也实现一套写者优先的同步方案。
+
+在前面的实现的基础上，加一个信号量`no_writer`，用于表示没有写者，每次读者在进入临界区前需要等待`no_writer`这个信号，而写者也维护一个写者数量的变量，当写者减少为0时，发出`no_writer`信号。第一个进入的写者调用`no_writer.wait()`来阻塞写者，代码描述如下
+
+```c
+semaphore resource = 1;  // 用于资源互斥 
+semaphore no_writer = 1;  // 标识是否已经有写者
+int reader_cnt = 0;
+semaphore reader_cnt_lock = 1;
+int writer_cnt =0;
+semaphore writer_cnt_lock = 1;
+
+void writer(){
+  writer_cnt_lock.wait();
+  writer_cnt ++;
+  if(writer_cnt == 1) // 第一个写者
+    no_writer.wait() ;  // 标识已经有写者了  阻塞读者
+  writer_cnt_lock.signal();
+  
+  resource.wait();  // 尝试占用资源
+  ... ;             // 拿到资源进行写操作
+  resource.signal();  // 释放资源
+  
+  writer_cnt_lock.wait();
+  writer_cnt ++;
+  if(writer_cnt == 1) // 第一个写者
+    no_writer.wait() ;  // 标识已经有写者了
+  writer_cnt_lock.signal();
+}
+
+void reader(){
+  /*------进入区----------*/
+  no_writer.wait();    // 没有写者时才能进入
+  reader_cnt_lock.wait();
+  reader_cnt ++;       // 读者计数
+  if(reader_cnt == 1)  // 我是第一个读者，尝试获取资源
+    resource.wait();
+  reader_cnt_lock.signal();
+  no_writer.signal();  // 允许下一个读者进入
+  /*------进入区----------*/
+  
+  ... ;  // 读操作
+  
+  /*------退出区----------*/
+  reader_cnt_lock.wait();
+  reader_cnt --;       // 读完了 将计数减一
+  if(reader_cnt == 0)  // 我是最后一个，已经没有读者了，应当释放资源
+  	resource.signal();
+  reader_cnt_lock.signal();
+  /*------退出区----------*/
+}
+```
+
+上面代码和读者优先很相似，通过加入`no_writer`信号量来实现有写者时阻塞读者。
+
+---
+
+#### 写者优先实现
+
+同样在本实验中将写者优先策略用c语言实现并封装起来，代码见`lab1/writer_first.c  lab1/writer_first.h`，需要用到的变量和信号量封装如下
+
+```c
+typedef struct writer_first_rw_lock{
+    int reader_cnt,writer_cnt;  // number of reader and writer
+    sem_t r_cnt_lock,w_cnt_lock; // lock for reader_cnt and writer_cnt
+    sem_t no_writer;             // reader can use resource only when there is no writer
+    sem_t resource;              // lock resource
+}writer_first_rw_lock;
+```
+
+同样在头文件中暴露类型接口
+
+```c
+typedef struct writer_first_rw_lock *wf_rw_lock;
+```
+
+创建和销毁结构代码如下
+
+```c
+wf_rw_lock new_wf_rw_lock() {
+    wf_rw_lock t = malloc(sizeof(writer_first_rw_lock));
+    if(t == NULL)
+        return NULL;
+
+    t->reader_cnt =  t->writer_cnt = 0;
+    sem_init(&t->r_cnt_lock,0,1);
+    sem_init(&t->w_cnt_lock,0,1);
+    sem_init(&t->no_writer,0,1);
+    sem_init(&t->resource,0,1);
+
+    return t;
+}
+
+void destroy_wf_rw_lock(wf_rw_lock l) {
+    sem_destroy(&l->r_cnt_lock);
+    sem_destroy(&l->w_cnt_lock);
+    sem_destroy(&l->no_writer);
+    sem_destroy(&l->resource);
+}
+```
+
+读者进入区和退出区代码如下
+
+```c
+void wf_r_lock(wf_rw_lock l) {
+    sem_wait(&l->no_writer);   // only when there is no writer
+
+    sem_wait(&l->r_cnt_lock);
+    l->reader_cnt ++;
+    if(l->reader_cnt == 1) // first reader
+        sem_wait(&l->resource);
+    sem_post(&l->r_cnt_lock);
+
+    sem_post(&l->no_writer);
+}
+
+void wf_r_unlock(wf_rw_lock l) {
+    sem_wait(&l->r_cnt_lock);
+    l->reader_cnt --;
+    if(l->reader_cnt == 0) // first reader
+        sem_post(&l->resource);
+    sem_post(&l->r_cnt_lock);
+}
+```
+
+写者进入区和退出区代码如下
+
+```c
+void wf_w_lock(wf_rw_lock l) {
+    sem_wait(&l->w_cnt_lock);
+    l->writer_cnt ++;
+    if(l->writer_cnt == 1)   // first writer
+        sem_wait(&l->no_writer);  // block reader out
+    sem_post(&l->w_cnt_lock);
+
+    sem_wait(&l->resource);
+}
+
+void wf_w_unlock(wf_rw_lock l) {
+    sem_post(&l->resource);
+
+    sem_wait(&l->w_cnt_lock);
+    l->writer_cnt --;
+    if(l->writer_cnt == 0)
+        sem_post(&l->no_writer);
+    sem_post(&l->w_cnt_lock);
+}
+```
+
+封装好后，碰到读者写者问题可以简化代码逻辑如下
+
+```c
+wf_rw_lock lock;
+
+void init(){
+  lock = new_wf_rw_lock();
+}
+
+void reader(){
+  wf_r_lock(lock);
+  
+  ... ;// 读操作
+  
+  wf_r_unlock(lock);
+}
+
+void writer(){
+  wf_w_lock(lock);
+  
+  ... ;// 写操作
+  
+  wf_w_unlock(lock);
+}
+```
+
+---
+
+#### 公平读写
+
+有时候我们希望读者和写者是公平的，读者不能饿死写者，反之亦然。为了实现公平的读写，我们需要创建一个信号量`queue`，用来表示等待队列，每次需要申请资源时需要先排队(假设该信号量的唤醒的实现是FIFO的，即先陷入阻塞的先被唤醒)，实现思路如下
+
+```c
+semaphore resource = 1;  // 用于资源互斥 
+semaphore queue = 1;
+int reader_cnt = 0;
+semaphore cnt_lock = 1;
+
+void writer(){  
+  queue.wait();     // 排队
+  resource.wait();  // 尝试占用资源
+  queue.signal();   // 申请资源完毕 唤醒下一个在队列里的进程
+  
+  ... ;             // 拿到资源进行写操作
+  
+  resource.signal();  // 释放资源
+}
+
+void reader(){
+  /*------进入区----------*/
+  queue.wait();     // 排队
+  cnt_lock.wait();
+  reader_cnt ++;       // 读者计数
+  if(reader_cnt == 1)  // 我是第一个读者，尝试获取资源
+    resource.wait();
+  cnt_lock.signal();
+  queue.signal();   // 申请资源完毕 唤醒下一个在队列里的进程
+  /*------进入区----------*/
+  
+  ... ;  // 读操作
+  
+  /*------退出区----------*/
+  cnt_lock.wait();
+  reader_cnt --;       // 读完了 将计数减一
+  if(reader_cnt == 0)  // 我是最后一个，已经没有读者了，应当释放资源
+  	resource.signal();
+  cnt_lock.signal();
+  /*------退出区----------*/
+}
+```
+
+若`queue`的唤醒是FIFO的，则每一个希望申请资源的进程在申请前都会进行`queue.wait()`操作，即在队列中进行等待，直到上一个申请资源的结束才会被唤醒。在该实现中，读者写者会按照`queue.wait()`的顺序依次被唤醒并尝试申请资源，而不会出现一直有读者源源不断的进入导致写者需要长时间等待，也不会出现一直有写者导致读者长时间等待的情况。
+
+---
+
+由于Linux下信号量唤醒时的调度机制较为复杂，并不是简单的FIFO，故要实现上面代码展示的公平读写需要自己实现一个FIFO的信号量。实现这个信号量需要用到条件变量等其他同步工具，较为麻烦，故本实验不实现公平读写。
+
+---
+
+#### 封装
+
+前文的代码可以看做是读写锁的两种实现方式，可以发现读写锁的接口是一样的，均包含如下操作
+
+- 锁的初始化
+- 锁资源的释放
+- 读者获取锁
+- 读者释放锁
+- 写者获取锁
+- 写者释放锁
+
+故为了统一，将前文实现的两种读写锁封装起来，对外暴露同样的接口，封装的结构体设计如下(代码见`rw_lock.c`)
+
+```c
+typedef struct reader_writer_lock{
+    void *lock;
+
+    // rw_lock interface
+    void (*r_lock)(void *);  // 读者获取锁
+    void (*r_unlock)(void *);  // 读者释放锁
+    void (*w_lock)(void *);  // 写者获取锁
+    void (*w_unlock)(void *); // 写者释放锁
+
+    void (*destroy)(void *);  // 释放资源
+}reader_writer_lock;
+```
+
+在头文件定义设定锁类型的宏以及读写锁类型
+
+```c
+#define READER_FIRST 0
+#define WRITER_FIRST 1
+
+typedef struct reader_writer_lock *rw_lock;
+```
+
+在读写锁初始化时按照参数取值设定具体的锁，初始化函数如下
+
+```c
+rw_lock new_rw_lock(int type) {
+    rw_lock t = malloc(sizeof(reader_writer_lock));
+    if(t == NULL)
+        return NULL;
+
+    if(type == READER_FIRST) {
+        t->lock = new_rf_rw_lock();
+        if(t->lock == NULL)
+            return NULL;
+        t->r_lock = (void (*)(void *)) rf_r_lock;
+        t->r_unlock = (void (*)(void *)) rf_r_unlock;
+        t->w_lock = (void (*)(void *)) rf_w_lock;
+        t->w_unlock = (void (*)(void *)) rf_w_unlock;
+
+        t->destroy = (void (*)(void *)) destroy_rf_rw_lock;
+    } else {  // WRITER_FIRST
+        t->lock = new_wf_rw_lock();
+        if(t->lock == NULL)
+            return NULL;
+        t->r_lock = (void (*)(void *)) wf_r_lock;
+        t->r_unlock = (void (*)(void *)) wf_r_unlock;
+        t->w_lock = (void (*)(void *)) wf_w_lock;
+        t->w_unlock = (void (*)(void *)) wf_w_unlock;
+
+        t->destroy = (void (*)(void *)) destroy_wf_rw_lock;
+    }
+
+    return t;
+}
+```
+
+包装读写锁的操作如下
+
+```c
+void r_lock(rw_lock l) {
+    l->r_lock(l->lock);
+}
+
+void r_unlock(rw_lock l) {
+    l->r_unlock(l->lock);
+}
+
+void w_lock(rw_lock l) {
+    l->w_lock(l->lock);
+}
+
+void w_unlock(rw_lock l) {
+    l->w_unlock(l->lock);
+}
+
+void destroy_rw_lock(rw_lock l) {
+    l->destroy(l->lock);
+}
+```
+
+有了如上封装，在需要使用读者优先的读写锁时只需要按照如下代码书写
+
+```c
+rw_lock lock;
+
+void init(){
+  lock = new_rw_lock(READER_FIRST);  // 创建读者优先的读写锁
+}
+
+void reader(){
+  r_lock(lock);
+  ... ;// 进行读操作
+  r_unlock(lock);
+}
+
+void writer(){
+  w_lock(lock);
+  ... ; // 进行写操作
+  w_unlock(lock);
+}
+```
+
+若需要使用写者优先的锁，只需要改变初始化时的参数即可，若要新增别的类型的读写锁锁，只需要新实现一个锁，提供读写锁的接口，然后修改`new_rw_lock`函数的内容即可。可以看到封装让代码具有更好的拓展性和灵活性。
+
+---
+
+#### 模拟
+
+由于多进程下共享资源较为麻烦且信号量在多进程使用时初始化参数会有变化，故本实验采用多线程的方式来模拟进程同步。模拟一个简单的对资源的读写操作如下
+
+```c
+long *resource;
+// 一个刻意复杂化的写函数
+// 若同步逻辑有错误
+// 程序很容易崩溃
+void write_resource(long num) {
+    free(resource);
+    resource = malloc(sizeof(long));
+    *resource = num ;
+}
+
+long read_resource(){
+    return *resource;
+}
+```
+
+---
+
+在本实验中需要统计读者和写者进行读写操作的时间，将时间相关的代码封装为一个计时器，如下(代码见`duration.c  duration.h`)
+
+```c
+typedef struct timer{
+    struct timespec start;
+}my_timer;
+
+void new_timer(my_timer *t){
+    clock_gettime(CLOCK_MONOTONIC_RAW,&t->start);
+}
+
+double ms_from_start(my_timer *t){
+    struct timespec end;
+    clock_gettime(CLOCK_MONOTONIC_RAW,&end);
+    return (double)(end.tv_nsec - t->start.tv_nsec) / 1000000 + (double)(end.tv_sec - t->start.tv_sec) * 1000 ;
+}
+```
+
+---
+
+接着模拟读者的操作如下，解释见注释
+
+```c
+void reader(void *arg){
+    long t1,t2;
+    my_timer timer; // 计时器
+    new_timer(&timer);
+    double start,end;
+    while(1){
+        r_lock(rwLock);  // 读者锁
+
+        start = ms_from_start(&timer); // 记录开始时间
+        t1 = read_resource();          // 读
+        usleep(100 * MILLI_SECOND + (rand() % 2001) * MILLI_SECOND);  // 模拟读操作耗时，随机耗时100~2100 ms
+        t2 = read_resource();         // 再次读
+        end = ms_from_start(&timer);  // 记录结束时间
+
+        if (t1 != t2)   // 判断是否有同步逻辑出错
+            printf("ERROR: writer writes during reader is reading !!!!!!!!!!!! (%lu,%lu)\n",t1,t2);
+
+        r_unlock(rwLock);  // 解锁
+
+      // 下面的代码是统计读者次数、时间的
+        pthread_mutex_lock(&rlock);
+        reader_cnt ++;
+        r_total_time += (end - start);
+        pthread_mutex_unlock(&rlock);
+				
+      // 输出相关信息
+        printf("reader(%d)  get:%lu   start:%.5f   end:%.5f \n",*(int *)arg,t1 ,start / 1000, end / 1000);
+
+        // do nothing
+        usleep((rand() % 2001) * MILLI_SECOND); // 剩余区随机等待0 ~ 2000 ms
+    }
+}
+```
+
+模拟写者的操作如下
+
+```c
+void *writer(void *arg){
+    long t;
+    my_timer timer;  // 计时器
+    new_timer(&timer);
+    double start,end;
+    while(1) {
+        w_lock(rwLock);
+
+        start = ms_from_start(&timer);  // 记录开始时间
+
+        t = *resource;
+        write_resource(t + 1);   // 进行+1写操作
+        usleep(100 * MILLI_SECOND + (rand() % 2001) * MILLI_SECOND);  // 模拟操作耗时，随机 100 ~ 2100 ms
+
+        end = ms_from_start(&timer);   // 结束时间
+
+        w_unlock(rwLock);
+
+      // 记录写者操作次数、时间
+        pthread_mutex_lock(&wlock);
+        writer_cnt ++;
+        w_total_time += (end - start);
+        pthread_mutex_unlock(&wlock);
+
+      // 输出信息
+        printf("writer(%d)     start:%.5f    end:%.5f \n",*(int *)arg,start / 1000 , end / 1000);
+
+        // do nothing
+        usleep((rand() % 2001) * MILLI_SECOND); // 剩余区随机休眠0 ~ 2001 ms
+    }
+}
+```
+
+---
+
+接着在主函数中，开启2个写者和8个读者，如下
+
+```c
+int rid[] = {1,2,3,4,5,6,7,8};
+int wid[] = {1,2};
+pthread_t rids[8];
+pthread_t wids[2];
+
+for(int i = 0;i < 2;i++)
+  pthread_create(wids + i, NULL, (void *(*)(void *)) writer, wid + i);
+
+for(int i = 0;i < 8;i++)
+  pthread_create(rids + i, NULL, (void *(*)(void *)) reader, rid + i);
+
+for(int i = 0;i < 8;i ++)
+  pthread_join(rids[i],NULL) ;
+
+for(int i = 0;i < 2;i ++)
+  pthread_join(wid[i],NULL);
+```
+
+该程序可以通过命令行参数设置读写锁的类型，相关代码如下
+
+```c
+int type = READER_FIRST;
+
+if(argc > 1 && strcmp(argv[1],"writer") == 0)
+	type = WRITER_FIRST;
+
+rwLock = new_rw_lock(type);
+```
+
+该部分代码见`main.c`。前文提到过，设计读写锁的目的是为了提高效率，让多个读者可以同时进行读操作，而不是串行操作，为了比较是否有效率上的提升，在实验中我还多谢了一份代码(`lock.c`)，代码与前文一致，将所有读写锁换成了库中的互斥锁。
+
+---
+
+接着运行读者优先的读写锁、写者优先的读写锁、互斥锁三个程序，均运行20分钟，为了简单操作，使用脚本运行如下
+
+```bash
+running_time=$((20*60))  # 时间 20 * 60 s
+
+./rwLock writer > writer.txt &  # 写者优先
+pid1=$!
+
+./rwLock reader > reader.txt &  # 读者优先
+pid2=$!
+
+./lock > lock.txt &             # 使用互斥锁替代读写锁
+pid3=$!
+
+echo "start reader first($pid2) , writer($pid1) first and lock($pid3)"
+sleep $running_time             # 等待20分钟
+
+# 终止进程
+kill -SIGINT $pid1              
+kill -SIGINT $pid2
+kill -SIGINT $pid3
+
+echo 'all done'
+```
+
+注意，上面的脚本使用`kill -SIGINT $pid`命令给进程发送`SIGINT`命令来终止进程，为了使进程终止前能正常的输出信息，需要添加捕获信号的代码如下
+
+```c
+void signal_handler(int signum){
+    destroy_rw_lock(rwLock);
+    printf("\n\n");
+    printf("writer count:%lu writer time:%.5f \n",writer_cnt,w_total_time / 1000 ) ;
+    printf("reader count:%lu reader time:%.5f \n",reader_cnt,r_total_time / 1000) ;
+    fflush(stdout);
+    exit(signum);
+}
+
+int main(int argc,char **argv){
+  ...
+  signal(SIGINT,signal_handler);
+  signal(SIGTERM,signal_handler);  // 这是clion IDE终止程序时发出的信号
+  ...
+}
+```
+
+---
+
+#### 结果
+
+运行脚本，稳定运行20分钟后得到结果，现截取部分内容如下
+
+```bash
+# reader.txt 的最后几行内容
+reader(7)  get:48   start:1198.33457   end:1199.46027 
+reader(2)  get:48   start:1198.85120   end:1199.55754 
+reader(5)  get:48   start:1199.77615   end:1199.93389 
+
+
+writer count:48 writer time:44.51105 
+reader count:4458 reader time:4983.04897 
+
+# writer.txt 的最后几行内容
+reader(4)  get:725   start:1196.68879   end:1197.88521 
+reader(5)  get:725   start:1196.68927   end:1198.25578 
+reader(8)  get:725   start:1196.68844   end:1198.61397 
+reader(1)  get:725   start:1196.68932   end:1198.72308 
+writer(1)     start:1198.72338    end:1199.28960 
+
+
+writer count:726 writer time:782.37578 
+reader count:1719 reader time:1937.95813 
+
+# lock.txt 的最后几行内容
+reader(4)  get:218   start:1195.40089   end:1196.15241 
+reader(1)  get:218   start:1196.15285   end:1197.41226 
+writer(1)     start:1197.41270    end:1197.81345 
+reader(5)  get:219   start:1197.81290   end:1199.72853 
+
+
+writer count:219 writer time:244.52797 
+reader count:865 reader time:955.08227 
+```
+
+1. 在读者优先的策略下，20分钟的时间内，读者进行了4458次读操作，写者进行了48次写操作。写者写操作总时间为44.51105 s，而读者的读操作总时间为4983.04897 s。可以看到该时间比运行时间20分钟都长，这是因为多个读者的操作是可以并行进行的，所以八个读者总的读时间加起来比20分钟还长。显然在读者优先的策略下，写者写操作的次数远少于读者，写者读者数量分别为2 : 8，而写和读操作比例几乎为1:10。
+2. 在写者优先策略下，写者写次数为726，读者读次数为1719，写操作总时间为782.37578 s，读操作总时间为1937.95813 s，可以看到在写者优先的策略下写次数明显增多，读次数变少。读写总时间加起来依然超过了20分钟，因此读写锁还是发挥了多个读者同时读的效果。
+3. 在使用互斥锁来保护资源时，写者写次数为219次，写操作总时间为244.52797 s，读者读操作865次，读操作总时间为955.08227 s。两者操作次数的比例和读者写者数量比例基本一致，可以看到操作系统提供的调度基本公平。在该策略下，读-读 写-写 读-写均互斥，同一时刻只有一个线程可以操作资源，可以看到读者写者总操作时间加起来为1199.61024 s ，基本和程序运行时间一致。明显对于读者写者问题，在读操作较为耗时(比读写锁的操作耗时)，使用互斥锁效率会比读写锁效率低。
+
+实验中多次运行程序，均能保持稳定运行，读者没有发现两次读操作数据不一致的现象，说明同步逻辑正确。
+
+---
+
+## 说明
+
+### 目录结构
+
+本次实验上交的压缩包解压后为的目录结构如下
+
+```bash
+.
+├── lab1
+│   ├── CMakeLists.txt
+│   ├── duration.c
+│   ├── duration.h
+│   ├── lock.c
+│   ├── main.c
+│   ├── reader_first.c
+│   ├── reader_first.h
+│   ├── rw_lock.c
+│   ├── rw_lock.h
+│   ├── writer_first.c
+│   └── writer_first.h
+├── res
+│   ├── lock.txt
+│   ├── reader 2.txt
+│   ├── reader.txt
+│   ├── writer 2.txt
+│   └── writer.txt
+├── report.pdf
+└── run.sh
+```
+
+`lab1`目录下文件说明如下
+
+- CMakeLists.txt:    cmake构建工具使用的文件。
+- Duration.c/.h:   实现计算时间间隔的计时器，用于统计读者写者操作时间。
+- lock.c: 包含主函数，使用互斥锁保护资源。
+- main.c: 包含主函数，使用读者优先或写者优先策略保护资源。
+- reader_first.c/.h: 实现了读者优先的读写锁。
+- writer_first.c/.h: 实现了写者优先的读写锁。
+- rw_lock.c/.h: 封装了读写锁。
+
+`res`目录下为几次实验跑出的结果.
+
+`report.pdf`为本报告，`run.sh`为执行程序的脚本。
+
+---
+
+### 运行方式
+
+本次实验采用环境如下
+
+- gcc (Ubuntu 11.3.0-1ubuntu1~22.04) 11.3.0
+- cmake version 3.22.1
+- Ubuntu 22.04.1
+
+使用如下命令构建可持续程序
+
+```bash
+cd path/to/lab1  # 进入源码目录
+mkdir build
+cd build
+cmake ..
+make
+```
+
+编译成功后再`build`目录下可以看到两个可执行程序`lock`和`rwLock`，分别对应使用互斥锁和使用自己实现的读写锁模拟的两个程序。
+
+接着将`run.sh`脚本拷贝到该目录，运行脚本
+
+```bash
+cp ../../run ./
+source run.sh
+```
+
+运行结束后该目录下会有输出结果`lock.txt`、`reader.txt`、`writer.txt`这三个文件。
+
+---
+
+## 实验总结
+
+在本次实验中，我使用信号量作为同步工具，应用读者优先和写者优先策略尝试结局读者写者问题，并与使用互斥锁进行了对比。通过该次实验，我对同步问题的理解更加深刻，学习了如何使用Linux下的同步工具，明白了如何通过使用信号量来处理一些同步问题，在这个过程中对操作系统调度有了更深刻的理解。
