finish all ....(maybe)

--- a/report/内存分配实验.md
+++ b/report/内存分配实验.md
@@ -18,6 +18,8 @@
 
 ### 设计
 
+本次实验使用c语言实现，分配器实现代码见`lab2/contiguous.c  lab2/contiguous.h`.
+
 #### 数据结构
 
 一块连续的内存空间可以用起始地址加上大小来表示，在程序中需要用链表来维护每一个连续的空闲块，故将链表节点设计如下
@@ -282,4 +284,406 @@ mem_pool *create_mem_pool(size_t s,int type){
 
 ### 测试
 
-实现了分配器后，编写程序检测分配器的行为。
+实现了分配器后，编写程序检测分配器的行为。主函数中主要的测试逻辑如下
+
+```c
+int *array[10000];
+int pos,num,n,size;
+char cmd[50];
+for(;;){
+  if(!ignore) printf(">>");
+  scanf("%s",cmd);
+  if(strcmp(cmd,"alloc") == 0){  // 分配内存
+    scanf("%d%d%d",&pos,&num,&size);  // 给array[pos]用分配器分配一块大小为size的内存，用其中的前4字节存num这个整数
+    array[pos] = Malloc(size);  // Malloc是包装过的，内部可以是不同分配函数
+    *array[pos] = num;
+  }else if(strcmp(cmd,"check") == 0){  // 检查*array[pos]的值 
+    scanf("%d",&pos);
+    fprintf(check_output,"%d\n",*array[pos]);
+  }else if(strcmp(cmd,"free") == 0){   // 释放array[pos]指向的内存
+    scanf("%d",&pos);
+    Free(array[pos]);
+  } else
+    break;
+  if(pool != NULL && !ignore) {  // ignore 变量通过命令行参数设置
+    print_free_block(output, pool);  // 输出空闲块个数
+  }
+  if(pool != NULL) {
+    int tmp = get_fragments(pool);
+    if (tmp > max_fragments)
+      max_fragments = tmp;
+  }
+}
+```
+
+主程序可以通过输入`alloc`命令执行内存分配操作，输入`free`命令执行释放内存操作，`check`命令检查某块内存的值，`exit`退出程序。
+
+为了对比不同策略下分配器的行为以及将分配器与标准库提供的分配对比，主程序可以通过命令行参数来设置分配器，命令语法如下
+
+```bash
+# 可执行文件名为lab2
+./lab2 [-I] -t <type> -s <strategy> -o <output-file> -c <check-output-file>
+```
+
+各个选项解释如下
+
+- -I 选项：若有该选项则不输出空闲块信息。
+- -t  \<type\> : \<type\> 可以为system或mine，若为mine，使用自己实现的分配器，若为system，则使用malloc和free
+- -s \<strategy\>:\<strategy\>可以为first或best或worst，对应first-fit best-fit worst-fit三种策略
+- -o \<output-file\>:\<output-file\>若为stdout则空闲块信息输出到标准输出流，否则指定输出空闲块信息的文件
+- -c \<check-output\>:指定输出check指令结果的文件，若为stdout，则输出到标准输出流。
+
+#### First-fit
+
+启动程序测试如下
+
+```bash
+./lab2 -t mine -s first -o stdout -c stdout
+>>alloc 0 1234 120            # 给0号指针分配120字节的空间，存数字1234
+free blocks: (128,268435456)  # 分配了120的空间，加上header即128字节，故(0,127)被分出去
+frament:1
+
+>>alloc 1 2345 57             
+free blocks: (193,268435456)  # 注意该空闲块是左闭右开的
+frament:1
+
+>>alloc 2 3456 992
+free blocks: (1193,268435456)  
+frament:1
+
+>>alloc 3 4567 100
+free blocks: (1301,268435456)  
+frament:1
+
+>>alloc 4 5678 769          # 到这里已经连续分配了5块内存
+free blocks: (2078,268435456)  
+frament:1
+
+>>check 0                   # 检查0号指针指向的内存存的数字
+1234
+free blocks: (2078,268435456)  
+frament:1
+
+>>free 0                    # 释放0号指针指向的内存
+free blocks: (0,128)  (2078,268435456)   # 可以看到释放后，空闲块变为两块，[0,128)重新放回空闲链表
+frament:2
+
+>>check 3                   # 查看3号指针指向内存存的数字
+4567
+free blocks: (0,128)  (2078,268435456)  
+frament:2
+
+>>free 3                    # 释放3号指针指向的内存
+free blocks: (0,128)  (1193,1301)  (2078,268435456)   # 空闲块变为3块
+frament:3
+
+>>check 1
+2345
+free blocks: (0,128)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>free 1                     # 释放1号指针指向的内存
+free blocks: (0,193)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>alloc 0 123 100            # 再分配100字节空间  (加上header实际需要108字节)
+free blocks: (108,193)  (1193,1301)  (2078,268435456)   # 可以看到first-fit从第一个块分配空间
+frament:3
+
+>>free 4                    # 释放四号指针指向的内存
+free blocks: (108,193)  (1193,268435456)    # 可以看到合并了空闲块变为一个大块
+frament:2
+
+>>exit  # 退出
+allocate times:6
+free times:4
+total allocate time: 0.000008 s
+total free time: 0.000011 s
+max fragments:3
+```
+
+上面的实例可以看出first-fit分配策略以及相邻块合并的结果，整个过程没有产生错误。
+
+---
+
+#### Best-fit
+
+使用同样的指令输入，执行结果如下
+
+```bash
+./lab2 -t mine -s best -o stdout -c stdout
+>>alloc 0 1234 120
+free blocks: (128,268435456)  
+frament:1
+
+>>alloc 1 2345 57
+free blocks: (193,268435456)  
+frament:1
+
+>>alloc 2 3456 992
+free blocks: (1193,268435456)  
+frament:1
+
+>>alloc 3 4567 100
+free blocks: (1301,268435456)  
+frament:1
+
+>>alloc 4 5678 769
+free blocks: (2078,268435456)  
+frament:1
+
+>>check 0
+1234
+free blocks: (2078,268435456)  
+frament:1
+
+>>free 0
+free blocks: (0,128)  (2078,268435456)  
+frament:2
+
+>>check 3
+4567
+free blocks: (0,128)  (2078,268435456)  
+frament:2
+
+>>free 3         
+free blocks: (0,128)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>check 1
+2345
+free blocks: (0,128)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>free 1    # 直到这里都和first-fit一样
+free blocks: (0,193)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>alloc 0 123 100   # 分配一块大小为100字节的空间(加上header共108字节)
+free blocks: (0,193)  (2078,268435456) # 可以看到，和first-fit不同，此时分配器使用了第二个空闲块分配 该块大小最接近要求
+frament:2
+
+>>free 4
+free blocks: (0,193)  (1301,268435456)  # 合并了相邻的空闲块
+frament:2
+
+>>exit
+allocate times:6
+free times:4
+total allocate time: 0.000009 s
+total free time: 0.000024 s
+max fragments:3
+```
+
+#### Worst-fit
+
+再次使用同样的输入，执行结果如下
+
+```bash
+./lab2 -t mine -s worst -o stdout -c stdout
+>>alloc 0 1234 120
+free blocks: (128,268435456)  
+frament:1
+
+>>alloc 1 2345 57
+free blocks: (193,268435456)  
+frament:1
+
+>>alloc 2 3456 992
+free blocks: (1193,268435456)  
+frament:1
+
+>>alloc 3 4567 100
+free blocks: (1301,268435456)  
+frament:1
+
+>>alloc 4 5678 769
+free blocks: (2078,268435456)  
+frament:1
+
+>>check 0
+1234
+free blocks: (2078,268435456)  
+frament:1
+
+>>free 0
+free blocks: (0,128)  (2078,268435456)  
+frament:2
+
+>>check 3
+4567
+free blocks: (0,128)  (2078,268435456)  
+frament:2
+
+>>free 3         
+free blocks: (0,128)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>check 1
+2345
+free blocks: (0,128)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>free 1    # 直到这里都和first-fit一样
+free blocks: (0,193)  (1193,1301)  (2078,268435456)  
+frament:3
+
+>>alloc 0 123 100  # 可以看到此处的分配时，选择了最大的一块空间
+free blocks: (0,193)  (1193,1301)  (2186,268435456)  
+frament:3
+
+>>free 4
+free blocks: (0,193)  (1193,2078)  (2186,268435456)   # 可以看到相邻空闲内存合并
+frament:3
+
+>>exit
+allocate times:6
+free times:4
+total allocate time: 0.000013 s
+total free time: 0.000028 s
+max fragments:3
+```
+
+---
+
+#### 性能测试
+
+为了测试代码是否产生内存泄露错误，以及观察大量分配释放操作下分配器的表现，在该实验中我写了一个自动生成指令的python代码(见`generate_op.py`)，该工具使用方法举例如下
+
+```bash
+python generate_op 100000 check.txt > op.txt
+```
+
+该命令产生100000+条随机指令，并将正确的check指令输出结果输出到`check.txt`文件内以供对比，指令输出到`op.txt`中，生成后使用如下指令分别测试三种策略以及库函数`malloc  free`的执行情况
+
+```bash
+./lab2 -I -t mine -s first -o output.txt -c checkout.txt < op.txt  # first-fit
+./lab2 -I -t mine -s best -o output.txt -c checkout.txt < op.txt   # best-fit
+./lab2 -I -t mine -s worst -o output.txt -c checkout.txt < op.txt  # worst-fit
+./lab2 -I -t system -s first -o output.txt -c checkout.txt < op.txt # 标准库的malloc和free
+```
+
+经过比对(使用`cmp`命令)，各个例子输出的`checkout.txt`均和python生成的`check.txt`一样，各个例子测试结果如下
+
+```bash
+# first-fit
+allocate times:33504
+free times:33504
+total allocate time: 0.113683 s
+total free time: 0.234138 s
+max fragments:91
+
+# best-fit
+allocate times:33504
+free times:33504
+total allocate time: 0.142204 s
+total free time: 0.199805 s
+max fragments:86
+
+# worst-fit
+allocate times:33504
+free times:33504
+total allocate time: 0.171381 s
+total free time: 0.214168 s
+max fragments:95
+
+# malloc free
+allocate times:33504
+free times:33504
+total allocate time: 0.096222 s
+total free time: 0.063929 s
+max fragments:0  # 不统计空闲碎块数量
+```
+
+可以看到，在`first-fit`策略下，33504次内存分配一共使用了0.113683 s，是自己实现的分配器中最快的，这是因为`first-fit`不需要扫描整个空闲块链表。33504次释放操作用时0.234138 s，用时较长，这可能是因为释放过程中的产生了较多的合并操作。整个过程中，内存最多被划分为91块连续但不相邻的空间。
+
+而在`best-fit`策略下，分配用时比`first-fit`稍长，这是因为需要扫过全部空闲块来找`best-fit`的块，`free`操作用时最短，可以看到该分配下合并操作较少。而在该策略下，最大碎片数为86，是三种策略中最少的。
+
+在`worst-fit`策略下，分配用时最长，这可能是因为该分配策略下，空闲块数量较多且每次分配时需要将所有空闲块扫一遍，所以分配速度较慢。释放用时为0.214168 s，最大碎片数为95，是三种策略中最大的。
+
+库函数的分配释放速度最快，我的分配器本身也使用了`malloc`和`free`(维护链表)，且并没有做太多的优化，故库函数速度最快。
+
+从上面的实验看出，`worst-fit`和`best-fit`相差不大，而`worst-fit`效率较低，会造成较多的的内存碎片。
+
+---
+
+#### 内存泄露检测
+
+本次实验使用`valgrind`检测是否有内存泄露，检测命令如下
+
+```bash
+valgrind --leak-check=full --show-leak-kinds=all ./lab2 -I -t first -s worst \
+	-o output.txt -c checkout.txt < op.txt
+```
+
+输出结果如下
+
+```bash
+==10123== Command: ./lab2 -I -t mine -s first -o output.txt -c checkout.txt
+==10123== 
+==10123== Warning: set address range perms: large range [0x4e8a028, 0x14e8a058) (noaccess)
+==10123== 
+==10123== HEAP SUMMARY:
+==10123==     in use at exit: 0 bytes in 0 blocks
+==10123==   total heap usage: 33,513 allocs, 33,513 frees, 269,520,912 bytes allocated
+==10123== 
+==10123== All heap blocks were freed -- no leaks are possible
+==10123== 
+==10123== For lists of detected and suppressed errors, rerun with: -s
+==10123== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
+```
+
+另外两种策略均使用`valgrind`测试，结果均没有出现内存错误
+
+---
+
+## 说明
+
+本次实验上交的内容如下
+
+```
+.
+├── lab2
+│   ├── CMakeLists.txt
+│   ├── contiguous.c
+│   ├── contiguous.h
+│   ├── generate_op.py
+│   └── main.c
+└── report.pdf
+```
+
+其中`lab2`目录内为源代码`CMakeLists.txt`为构建工具CMake使用的文件，`contiguous.c/.h`为连续内存分配器的实现，`main.c`为主程序，`generate_op.py`为生成随机指令的`python`代码，用于测试程序，详见上文。`report.pdf`为本报告。
+
+本人实验环境如下
+
+- gcc (Ubuntu 11.3.0-1ubuntu1~22.04) 11.3.0
+- cmake version 3.22.1
+- Ubuntu 22.04.1
+- valgrind-3.18.1
+- GNU Make 4.3
+
+编译生成可执行文件的方法如下
+
+```bash
+cd path/to/lab2  # 进入代码目录
+mkdir build      # 创建构建目录
+cd build         # 进入构建目录
+cmake ..         # 产生makefile
+make             # 构建程序
+```
+
+上述步骤完成后`build`目录下会产生可执行文件`lab2`，该程序运行时需要指定命令行参数，详见前文，测试方式见性能测试一小节。
+
+---
+
+## 实验总结
+
+在本次实验中，我自己实现了一个简单的连续内存分配器，在该过程中，加深了对连续内存分配的一些方法和策略的理解，同时锻炼了操作链表以及c语言一些底层编程的能力。完成了分配器的编写后，我还进行了一些简单的测试，编写了一个测试样例生成的简单程序，这也锻炼了我的动手能力。
+
+本次实验设计的分配器还可以做出改进：
+
+- 不使用显式的链表，在本实验中显式的创建链表，维护该链表需要额外调用多次`malloc`和`free`，增加了开销。在该分配器设计下可以考虑直接在给用户分配的`block`的头部添加相关指针域，从而避免调用`malloc`和`free`。
+- 添加一些数据结构以加速`best-fit`和`worst-fit`的查找速度，如多加一条链将内存按大小顺序串起来以减少访问量。
+- 调整空闲内存合并的逻辑，每次释放内存时合并内存消耗较大。
+
+本次内存实验还可以考虑模拟一些其他的操作系统管理内存的方法如伙伴系统、`slab`分配器等等，可以模拟虚拟内存的`demand paging`机制，采用`LRU`或其他策略进行页替换，实现工作集模型等等。
